--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
          echo "$SSH_KEY" > key.pem
          chmod 600 key.pem
+         ls -la target/
 
          # Find the first jar file in target/ directory
          FILE=$(ls target/*.jar | head -n 1)
