--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,30 +22,23 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-      - name: Deploy to Tomcat Server
+      - name: Deploy WAR to Tomcat Server
         env:
           EC2_USER: ${{ secrets.EC2_USER }}
           EC2_HOST: ${{ secrets.EC2_HOST }}
           SSH_KEY: ${{ secrets.SSH_KEY }}
         run: |
-         echo "$SSH_KEY" > key.pem
-         chmod 600 key.pem
-         ls -la target/
+          echo "$SSH_KEY" > key.pem
+          chmod 600 key.pem
+          ls -la target/
 
-         # Find the first jar file in target/ directory
-         FILE=$(ls target/*.jar | head -n 1)
+          # Find the first WAR file in target directory
+          FILE=$(ls target/*.war | head -n 1)
 
-         echo "Uploading $FILE to EC2"
-         scp -i key.pem -o StrictHostKeyChecking=no "$FILE" $EC2_USER@$EC2_HOST:~/app.jar
+          echo "Uploading WAR $FILE to Tomcat on EC2"
+          scp -i key.pem -o StrictHostKeyChecking=no "$FILE" $EC2_USER@$EC2_HOST:/opt/tomcat/webapps/app.war
 
-         echo "Restarting app on EC2"
-         ssh -i key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
-         echo "Killing old Java app (if any)..."
-         pkill -f 'java -jar app.jar' || true
-
-         echo "Starting new app..."
-         nohup java -jar app.jar > app.log 2>&1 &
-
-         echo "App started. Check app.log for logs."
-         EOF
-
+          echo "Restarting Tomcat server on EC2"
+          ssh -i key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
+            sudo systemctl restart tomcat
+          EOF
