--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,6 @@ jobs:
 
           # Try to find WAR in current directory first, then in target/
           FILE=$(ls *.war 2>/dev/null | head -n 1 || true)
-
           if [ -z "$FILE" ]; then
             FILE=$(ls target/*.war 2>/dev/null | head -n 1 || true)
           fi
@@ -50,8 +49,9 @@ jobs:
           echo "Uploading WAR file: $FILE"
           scp -i key.pem -o StrictHostKeyChecking=no "$FILE" $EC2_USER@$EC2_HOST:/home/$EC2_USER/app.war
 
-          echo "Moving WAR file and restarting Tomcat on EC2"
+          echo "Moving WAR file to Tomcat webapps and restarting Tomcat"
           ssh -i key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << EOF
             sudo mv /home/$EC2_USER/app.war /opt/tomcat/webapps/app.war
+            sudo chown tomcat:tomcat /opt/tomcat/webapps/app.war
             sudo systemctl restart tomcat
           EOF
